fix: cards layout bug

--- a/crhistmas-task/src/components/Shop/Shop.scss
+++ b/crhistmas-task/src/components/Shop/Shop.scss
@@ -8,9 +8,6 @@
 }
 
 .shop-items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   width: 100%;
   &__title {
     font-size: 42px;
@@ -22,6 +19,12 @@
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
+    width: 100%;
+  }
+  &__top-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     width: 100%;
   }
   .fav-count {
